--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@tailwindcss/vite": "^4.1.16",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "tailwindcss": "^4.1.16"
+    "tailwindcss": "^4.1.16",
+    "react-router-dom": "^6.26.2",
+    "axios": "^1.7.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -24,6 +26,8 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47"
   }
 }
