--- a/k8s/frontend/deployment.yaml
+++ b/k8s/frontend/deployment.yaml
@@ -16,6 +16,7 @@ spec:
       containers:
         - name: frontend-seminario
           image: kennyadg/frontend-seminario:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 80
           resources:
