--- a/k8s/frontend/deployment.yaml
+++ b/k8s/frontend/deployment.yaml
@@ -15,10 +15,13 @@ spec:
     spec:
       containers:
         - name: frontend-seminario
-          image: kennyadg/frontend-seminario:latest  # Se actualizará con kubectl s
+          image: kennyadg/frontend-seminario:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 80
+          env:
+            - name: DEPLOY_TIME
+              value: "TIMESTAMP_PLACEHOLDER"  # Esto se puede cambiar para forzar redespliegue
           resources:
             requests:
               memory: "64Mi"
