--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -26,3 +26,6 @@ jobs:
           tags: |
             kennyadg/frontend-seminario:latest
             kennyadg/frontend-seminario:${{ github.sha }}
+
+      - name: Save image tag for downstream workflow
+        run: echo "IMAGE_TAG=${GITHUB_SHA}" >> $GITHUB_ENV
